# mpiGadem

./: DESCRIPTION  config.status  configure.ac  configure.win
R/: AllClasses.R
R/.svn/: all-wcprops  entries
R/.svn/text-base/: readPWMfile.R.svn-base  zzz.R.svn-base
inst/.svn/: all-wcprops
inst/doc/: .nfs0000000001429c6e00000174
inst/doc/.svn/: all-wcprops  entries
inst/extdata/.svn/text-base/: Test_100.bed.svn-base
man/: GADEM.Rd  gadem-class.Rd  readPWMfile.Rd
man/.svn/: entries
man/.svn/text-base/: align-class.Rd.svn-base  parameters-class.Rd.svn-base
src/: Makevars.in  Makevars.win.in  mpiFunctions.c  output.c  score_subsequence.c
src/.svn/: entries
src/.svn/text-base/: check_pwm_dist.c.svn-base  config.h.in.svn-base  crossover.c.svn-base  defines.h.svn-base  gadem.h.svn-base  read_pwm0.c.svn-base  scan_sites.c.svn-base  top_kmers.c.svn-base
trunk/: NAMESPACE  configure
trunk/.svn/: all-wcprops  entries
trunk/R/: readGademPWMFile.R
trunk/R/.svn/text-base/: AllMethods.R.svn-base  GADEM.R.svn-base  readTransfacFile.R.svn-base
trunk/inst/.svn/: entries
trunk/inst/doc/.svn/text-base/: rGADEM.Rnw.svn-base
trunk/inst/extdata/: Test_100.fasta
trunk/inst/extdata/.svn/: all-wcprops  entries
trunk/inst/extdata/.svn/text-base/: jaspar2009.txt.svn-base
trunk/man/: motif-class.Rd
trunk/man/.svn/: all-wcprops
trunk/src/: initial_population.c  read_matrix.c  read_seq.c  sample_wo_replacement.c  selection.c
trunk/src/.svn/: all-wcprops
trunk/src/.svn/text-base/: Gadem_Analysis.c.svn-base  Makevars.svn-base  background.c.svn-base  base_frequency.c.svn-base  config.h.svn-base  mask_sites.c.svn-base  mutation.c.svn-base  populationCalculation.c.svn-base  transform_pwm.c.svn-base
